--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>唐诗一首</title>
 </head>
 <body>
-<img src="1bae231f76aa4896b1fb368213e1f4fb.jpg"/>
+<img src="1bae231f76aa4896b1fb368213e1f4fb.jpeg"/>
 <h1>静夜思</h1>
 <p>床前明月光,</p>
 <p>疑是地上霜。</p>
